# crystalpy

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml  setup.py
crystalpy/diffraction/: ComplexAmplitude.py  Diffraction.py  Diffraction1.py  DiffractionResult.py  DiffractionSetup.py  DiffractionSetupAbstract.py  DiffractionSetupDabax.py  DiffractionSetupShadowPreprocessor.py  DiffractionSetupShadowPreprocessorV1.py  DiffractionSetupShadowPreprocessorV2.py  DiffractionSetupSweeps.py  DiffractionSetupXraylib.py  PerfectCrystalDiffraction.py
crystalpy/examples/: Si111.py  Si111_energy_scan.py  Si111_guigay.py  Si111_guigay_map_inside_crystal.py  Si111_layered.py  Si111_simple.py  Si111_simple_laue_guigay.py  Si111_simple_xraylib_dabax_comparison.py  YB66.py  calc_xcrystal.py  check_against_xoppy_crystal.py  check_against_xoppy_crystal_including_shadow_proprocessor.py  check_structure_factor.py
crystalpy/polarization/: MuellerMatrix.py
crystalpy/tests/: PyCrystalTests.py
crystalpy/util/: ComplexAmplitudePhoton.py  ComplexAmplitudePhotonBunch.py  Photon.py  PhotonBunch.py  PolarizedPhoton.py  PolarizedPhotonBunch.py  StokesVector.py  Vector.py  bragg_preprocessor_file_io.py  calc_xcrystal.py
doc/: index.rst
docs/: Si111.ipynb  Si111_energy_scan.ipynb  Si111_simple.ipynb  Si111_simple_xraylib_dabax_comparison.ipynb  api.rst  check_scans_xcrystal.ipynb  check_structure_factor.ipynb  conf.py  crystalpy.diffraction.rst  crystalpy.examples.rst  crystalpy.polarization.rst  crystalpy.rst  crystalpy.tests.rst  crystalpy.tests.util.rst  crystalpy.util.rst  examples.rst  index.rst  indicesandtables.rst  installation.rst  modules.rst  requirements.txt  util.rst
examples/: Hirano_NIM_1993.py  Si111.py  Si111_energy_scan.py  Si111_guigay.py  Si111_guigay_map_extinction.py  Si111_guigay_map_inside_crystal.py  Si111_layered.py  Si111_simple.py  Si111_simple_vectorized.py  Si111_simple_xraylib_dabax_comparison.py  Si111_simple_xraylib_dabax_shadowpreprocessors_comparison.py  YB66.py  check_against_xoppy_crystal.py  check_scans_xcrystal.py  make_docs_examples.py  scherrer.py  scherrer_vs_xtal_thickness.py
examples/CIF/: BiFeO3.cif  BiFeO3_angular_scan.py  CIF2dabax.py  DiffractionSetupCIF.py  Si.cif
tests/util/: VectorTest.py  (+3 more)
(+19 files in other folders)
